--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,15 @@
-ipyleaflet>=0.14.0
-ipywidgets>=7.7.1
-matplotlib>=3.7.0
+Flask>=2.3
+gunicorn==21.2.0
+joblib>=1.3.2
 numpy>=1.24.2
-opencv-python>=4.1.2
 pandas>=1.5.3
+scikit-learn>=1.2.0
+xgboost>=1.7.5
+matplotlib>=3.7.0
+seaborn>=0.12.2
+requests>=2.27.1
+python-dotenv>=0.20.0
+sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.3
 pymysql>=1.0.2
-python-dotenv>=0.20.0
-requests>=2.27.1
-scikit-learn
-seaborn>=0.12.2
-sqlalchemy>=2.0.38
-sympy>=1.10.1
-xgboost
-Flask
-joblib
-pandas
-scikit-learn
-gunicorn==21.2.0
+opencv-python>=4.5.0
